Add partials, DRY up views

--- a/WordGame/Views/Home/MadLibsForm.cshtml
+++ b/WordGame/Views/Home/MadLibsForm.cshtml
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset='utf-8'>
-  <title>Mad Libs 2.0</title>
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-</head>
-<body>
+@{
+  Layout = "_Layout";
+}
+
   <div class='container'>
     <div class="jumbotron">
       <h1>Mad Libs 2.0</h1>
@@ -57,5 +53,3 @@
       </form>
     </div>
   </div>
-</body>
-</html>
